# grynn_pylib

./: .hintrc  .pre-commit-config.yaml  LICENSE  Makefile  README.md  bump_version.py  plot.py  plot_payoff.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.devcontainer/: agents.md  devcontainer.json
.github/workflows/: publish-pypi.yml  pytest.yml
examples/: cagr.py  plot.py  plot_option_interactive.py  rolling_median_cagr.xlsx  theta.py
examples/web/: foo.py  index.html  returns.json
grynn_pylib/: __init__.py  decorators.py  utils.py
grynn_pylib/data_providers/: __init__.py
grynn_pylib/data_providers/yahoo_finance/: __init__.py  client.py  spot_resolver.py
grynn_pylib/finance/: __init__.py  options.py  timeseries.py
tests/: test_finance_options.py  test_finance_timeseries.py  test_utils.py
