[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "grynn_pylib"
version = "0.2.0"
description = "A Python library of general utility functions, by & for Grynn."
authors = ["Vishal Doshi <vishal.doshi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2"
loguru = "^0.7.2"
scipy = "^1.14"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
poetry-plugin-export = "^1.8.0"

