[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grynn_pylib"
version = "0.2.3"
description = "A Python library of general utility functions, by & for Grynn."
authors = [ { name="Vishal Doshi", email="vishal.doshi@gmail.com" } ]
requires-python = ">=3.12"
dependencies = [ 
    "pandas ~= 2.2", 
    "loguru ~= 0.7.2",
    "scipy ~= 1.14",
    "numpy ~= 2.1.2"
]

[dev-dependencies]
pytest = "^6.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
poetry-plugin-export = "^1.8.0"